--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Title
 url: ""
-favicon: /images/favicon-isomer.ico
+favicon: /images/logo - Copy.png
 colors:
-  primary-color: "#381bec"
+  primary-color: "#200e96"
   secondary-color: "#e90000"
   media-colors:
     - title: media-color-one
