--- a/_our-canberra/collection.yml
+++ b/_our-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-canberra:
     output: true
     order:
+      - Canberra at a Glance/.keep
       - Our Highlights.md
       - Our Staff.md
       - Yearbook 2021.md
