--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Title
 url: ""
-favicon: /images/logo - Copy.png
+favicon: /images/css-logo.png
 colors:
   primary-color: "#200e96"
   secondary-color: "#e90000"
