--- a/_partners-of-canberra/collection.yml
+++ b/_partners-of-canberra/collection.yml
@@ -2,5 +2,6 @@ collections:
   partners-of-canberra:
     output: true
     order:
+      - Parent Support Group.md
       - Canberran Alumni.md
       - Friends of Canberra.md
