--- a/_partners-of-canberra/collection.yml
+++ b/_partners-of-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   partners-of-canberra:
     output: true
     order:
+      - School Advisory Committee.md
       - Parent Support Group.md
       - Canberran Alumni.md
       - Friends of Canberra.md
