--- a/_discover-canberra/collection.yml
+++ b/_discover-canberra/collection.yml
@@ -2,4 +2,5 @@ collections:
   discover-canberra:
     output: true
     order:
+      - Applied Learning (ALP).md
       - Student Leadership & Recognition.md
