--- a/_discover-canberra/collection.yml
+++ b/_discover-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   discover-canberra:
     output: true
     order:
+      - Our Co Curriculum/.keep
       - Our Cohorts/.keep
       - Our Cohorts/Sec One.md
       - Our Cohorts/Sec Two.md
