--- a/_our-co-curriculum/collection.yml
+++ b/_our-co-curriculum/collection.yml
@@ -2,5 +2,6 @@ collections:
   our-co-curriculum:
     output: true
     order:
+      - Sports/Badminton.md
       - Sports/.keep
       - Volleyball.md
