--- a/_our-co-curriculum/collection.yml
+++ b/_our-co-curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-co-curriculum:
     output: true
     order:
+      - Uniformed Groups/.keep
       - Sports/.keep
       - Sports/Badminton.md
       - Sports/Volleyball.md
