--- a/_our-co-curriculum/collection.yml
+++ b/_our-co-curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-co-curriculum:
     output: true
     order:
+      - Visual and Performing Arts/.keep
       - CCA Schedule.md
       - Uniformed Groups/.keep
       - Uniformed Groups/Boy's Brigade.md
