--- a/_our-co-curriculum/collection.yml
+++ b/_our-co-curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-co-curriculum:
     output: true
     order:
+      - Visual and Performing Arts/Concert Band.md
       - Visual and Performing Arts/Digital Media in Visual Arts Club (DMA).md
       - Visual and Performing Arts/.keep
       - CCA Schedule.md
