--- a/_our-co-curriculum/collection.yml
+++ b/_our-co-curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-co-curriculum:
     output: true
     order:
+      - Visual and Performing Arts/Choir.md
       - Visual and Performing Arts/Guzheng Ensemble.md
       - Visual and Performing Arts/Dance Club.md
       - Visual and Performing Arts/Concert Band.md
