--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,5 +2,6 @@ collections:
   students:
     output: true
     order:
+      - Class & Exam Time Table/.keep
       - Quick Links.md
       - Student Leadership & Recognition.md
