--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - Class & Exam Timetable.md
       - Library Online Public Access Catalogue (OPAC).md
       - Class & Exam Time Table/.keep
       - Class & Exam Time Table/Uniform and Booklist for Year 2022.md
