--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -60,6 +60,8 @@ links:
         url: /students/class-exam-time-table/
       - title: Quick Links
         url: /students/quick-links
+  - title: Teachers
+    url: /teachers/quick-links
   - title: Contact Us
     url: /contact-us/
   - title: Portal
