--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,5 +2,6 @@ collections:
   parents:
     output: true
     order:
+      - DSA/Applied learning Programme.md
       - DSA/.keep
       - Quick Links.md
