--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - Parent Handbook (II) on Learning with a Personal Learning Device.md
       - Parent Handbook (I) on Learning with a Personal Learning Device.md
       - DSA/Direct School Admission (DSA).md
       - DSA/Applied learning Programme.md
