--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - Webinar Resources.md
       - Personal Learning Device.md
       - PLD Information Kit.md
       - Cyberwellness Guides.md
