--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - Webinar Resources/Webinar Resources.md
       - Webinar Resources/.keep
       - Personal Learning Device.md
       - PLD Information Kit.md
