--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - Webinar Resources/2021 Sec 1 Webinar.md
       - Webinar Resources/Webinar Resources.md
       - Webinar Resources/.keep
       - Personal Learning Device.md
