--- a/_config.yml
+++ b/_config.yml
@@ -51,3 +51,4 @@ plugins:
   - jekyll-remote-theme
 staging: https://moe-canberrasec-staging.netlify.app
 prod: https://moe-canberrasec-prod.netlify.app
+resources_name: latest-happenings-and-announcements
