--- a/_our-curriculum/collection.yml
+++ b/_our-curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-curriculum:
     output: true
     order:
+      - Humanities.md
       - Science.md
       - Mathematics.md
       - English Language & Literature.md
