--- a/_our-curriculum/collection.yml
+++ b/_our-curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-curriculum:
     output: true
     order:
+      - Craft n Technology/Nutrition and Food Science.md
       - Craft n Technology/Craft & Technology.md
       - Craft n Technology/.keep
       - Mother Tongue.md
