--- a/_our-curriculum/collection.yml
+++ b/_our-curriculum/collection.yml
@@ -2,9 +2,9 @@ collections:
   our-curriculum:
     output: true
     order:
-      - Craft n Technology/Nutrition and Food Science.md
-      - Craft n Technology/Craft & Technology.md
-      - Craft n Technology/.keep
+      - Craft & Technology/Nutrition and Food Science.md
+      - Craft & Technology/Craft & Technology.md
+      - Craft & Technology/.keep
       - Mother Tongue.md
       - Humanities.md
       - Science.md
