--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ links:
       - title: Our Staff
         url: /our-canberra/our-staff
       - title: Yearbook 2021
-        url: /our-canberra/yearbook-2021
+        url: https://online.fliphtml5.com/obrr/zfnn/#p=1
   - title: Partners of Canberra
     url: /partners-of-canberra/school-advisory-committee
     sublinks:
