--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - Academic Programmes for Sec 4&5 in June.md
       - Canberra Secondary School welcomes our 2022 Sec 1 Students and
         Parents!.md
       - 2022 Sec 1 Webinar.md
