--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,8 @@ collections:
   cbss:
     output: true
     order:
+      - GCE N LEVEL EXAMINATONS RESULTS RELEASE ON FRIDAY 17 DECEMBER 2021 at
+        230 PM.md
       - Academic Programmes for Sec 4&5 in June.md
       - Canberra Secondary School welcomes our 2022 Sec 1 Students and
         Parents!.md
