--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - Release of GCE ‘O’ Level Results (12th January 2022).md
       - GCE N LEVEL EXAMINATONS RESULTS RELEASE ON FRIDAY 17 DECEMBER 2021 at
         230 PM.md
       - Academic Programmes for Sec 4&5 in June.md
