--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - Academic Support Programme (Graduating Class Students).md
       - Sembawang Sec Tamil Centre EOY Exam Timetable.md
       - Release of GCE ‘O’ Level Results (12th January 2022).md
       - GCE N LEVEL EXAMINATONS RESULTS RELEASE ON FRIDAY 17 DECEMBER 2021 at
