--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - May Excellence Programme for Sec 4E, 4N & 5N.md
       - Term 3 Tamil lessons at Sembawang Sec Tamil Centre.md
       - Sec 1 to 3 Tamil lessons at Sembawang Sec Tamil Centre.md
       - Academic Support Programme (Graduating Class Students).md
