--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - Racial Harmony Day.md
       - Total Defence Day.md
       - GCE N Level Results.md
       - SLS Support for Home Based Learning.md
