--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - Custom Error Page.md
       - International Friendship Day 2019.md
       - Racial Harmony Day.md
       - Total Defence Day.md
