--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - National Day Celebrations.md
       - Hidden Pages/.keep
       - Sec 2.md
       - Custom Error Page.md
