--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -47,7 +47,7 @@ links:
       - title: Student Suggestion Scheme (3S)
         url: /students/student-suggestion-scheme-3s
       - title: PLD Acceptable Use Policy
-        url: https://canberrasec.moe.edu.sg/qql/slot/u150/2021/Students/PLD%20Acceptable%20Use%20Policy/AUP_22%20Apr%2021.pdf
+        url: https://moe-canberrasec-staging.netlify.app/files/AUP_22%20Apr%2021.pdf
       - title: e-Student Handbook
         url: /students/e-student-handbook
       - title: Student ICON Onboarding Guide
