--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -51,7 +51,7 @@ links:
       - title: e-Student Handbook
         url: /students/e-student-handbook
       - title: Student ICON Onboarding Guide
-        url: https://canberrasec.moe.edu.sg/qql/slot/u150/2021/Students/Student%20ICON/Student%20iCON%20Onboarding%20Guide.pdf
+        url: https://moe-canberrasec-staging.netlify.app/files/Student%20iCON%20Onboarding%20Guide.pdf
       - title: Uniform and Booklist for 2022
         url: /students/uniform-and-booklist-for-year-2022
       - title: Library OPAC
