--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - Quick Links/Quick Links.md
       - Quick Links/.keep
       - Letters to Parents.md
       - Webinar Resources/.keep
