--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -14,5 +14,6 @@ collections:
       - DSA/.keep
       - DSA/Direct School Admission (DSA).md
       - DSA/Applied learning Programme.md
+      - Quick Links/Sexuality Education.md
       - Quick Links/.keep
       - Quick Links/Quick Links.md
