--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -14,6 +14,7 @@ collections:
       - DSA/.keep
       - DSA/Direct School Admission (DSA).md
       - DSA/Applied learning Programme.md
+      - Quick Links/Learning for Life Programme.md
       - Quick Links/PLD Fault Reporting.md
       - Quick Links/Sexuality Education.md
       - Quick Links/.keep
