--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Canberra Secondary School
-url: ""
+url: https://canberrasec.moe.edu.sg
 favicon: /images/css-logo.png
 colors:
   primary-color: "#200e96"
@@ -8,7 +8,7 @@ colors:
     - title: media-color-one
       color: "#49759a"
     - title: media-color-two
-      color: "#744d9f"
+      color: "#200e96"
     - title: media-color-three
       color: "#00838f"
     - title: media-color-four
@@ -52,3 +52,8 @@ plugins:
 staging: https://moe-canberrasec-staging.netlify.app
 prod: https://moe-canberrasec-prod.netlify.app
 resources_name: latest-happenings-and-announcements
+shareicon: /images/isomer-logo.svg
+is_government: false
+facebook-pixel: ""
+google_analytics: ""
+linkedin-insights: ""
