--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - 2019/.keep
       - 2022 Sec 1 Webinar.md
       - National Day Celebrations.md
       - Hidden Pages/.keep
