--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - 2020/Term 3 Tamil lessons at Sembawang Sec Tamil Centre.md
       - 2020/.keep
       - 2019/Racial Harmony Day.md
       - 2019/Total Defence Day.md
