--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - 2020/Cancellation of PSG Welcome Dinner on 14 Feb 2020.md
       - 2020/Sembawang Sec Tamil Centre EOY Exam Timetable.md
       - 2020/Sec 1 to 3 Tamil lessons at Sembawang Sec Tamil Centre.md
       - 2020/Term 3 Tamil lessons at Sembawang Sec Tamil Centre.md
