--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -8,6 +8,7 @@ collections:
       - 2020/Sec 1 to 3 Tamil lessons at Sembawang Sec Tamil Centre.md
       - 2020/Term 3 Tamil lessons at Sembawang Sec Tamil Centre.md
       - 2020/.keep
+      - 2019/GCE N Level Results.md
       - 2019/Racial Harmony Day.md
       - 2019/Total Defence Day.md
       - 2019/National Day Celebrations.md
