--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - 2020/May Excellence Programme for Sec 4E, 4N & 5N.md
       - 2020/Academic Support Programme (Graduating Class Students).md
       - 2020/Cancellation of PSG Welcome Dinner on 14 Feb 2020.md
       - 2020/Sembawang Sec Tamil Centre EOY Exam Timetable.md
