--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -20,7 +20,7 @@ collections:
       - Hidden Pages/.keep
       - Hidden Pages/Sexuality Education.md
       - Hidden Pages/Global Canberran Programme.md
-      - Sec 2.md
+      - Sec 2 Streaming 2018.md
       - Custom Error Page.md
       - SLS Support for Home Based Learning.md
       - Release of GCE ‘O’ Level Results (12th January 2022).md
