--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,7 @@ collections:
   cbss:
     output: true
     order:
+      - 2022/2022 Sec 1 Webinar.md
       - 2022/Release of GCE ‘O’ Level Results (12th January 2022).md
       - 2022/.keep
       - Canberra Secondary School welcomes our 2022 Sec 1 Students and
