--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -2,6 +2,8 @@ collections:
   cbss:
     output: true
     order:
+      - 2021/GCE N LEVEL EXAMINATONS RESULTS RELEASE ON FRIDAY 17 DECEMBER 2021
+        at 230 PM.md
       - 2021/.keep
       - 2022/.keep
       - 2022/Release of GCE ‘O’ Level Results (12th January 2022).md
