--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -12,6 +12,7 @@ collections:
       - 2021/Academic Programmes for Sec 4&5 in June.md
       - 2021/GCE N LEVEL EXAMINATONS RESULTS RELEASE ON FRIDAY 17 DECEMBER 2021
         at 230 PM.md
+      - 2020/Updates on 2019 Novel Coronavirus.md
       - 2020/.keep
       - 2020/Sembawang Sec Tamil Centre EOY Exam Timetable.md
       - 2020/Term 3 Tamil lessons at Sembawang Sec Tamil Centre.md
