--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -13,7 +13,7 @@ collections:
       - Parent Handbook (II) on Learning with a Personal Learning Device.md
       - DSA/.keep
       - DSA/Direct School Admission (DSA).md
-      - DSA/Applied learning Programme.md
+      - DSA/Applied Learning Programme.md
       - Quick Links/.keep
       - Quick Links/Quick Links.md
       - Quick Links/Sexuality Education.md
