--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -14,6 +14,7 @@ collections:
       - DSA/.keep
       - DSA/Direct School Admission (DSA).md
       - DSA/Applied Learning Programme.md
+      - Quick Links/FAQs.md
       - Quick Links/.keep
       - Quick Links/Quick Links.md
       - Quick Links/Sexuality Education.md
