--- a/_cbss/collection.yml
+++ b/_cbss/collection.yml
@@ -27,5 +27,6 @@ collections:
       - 2019/International Friendship Day 2019.md
       - 2019/Total Defence Day.md
       - Sec 2 Streaming 2018.md
+      - Hidden Pages/Custom Error Page.md
       - Hidden Pages/.keep
       - Hidden Pages/Global Canberran Programme.md
