--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -68,7 +68,7 @@ links:
       - title: Personal Learning Device
         url: /parents/personal-learning-device-pld-initiative
       - title: Cyberwellness Guides
-        url: https://beta.moe.gov.sg/programmes/cyber-wellness/
+        url: https://www.moe.gov.sg/education-in-sg/our-programmes/cyber-wellness
       - title: Parent Handbook (I)
         url: https://moe-canberrasec-staging.netlify.app/files/Parent%20Handbook%20I%20on%20Learning%20with%20a%20Personal%20Learning%20Device.pdf
       - title: Parent Handbook (II)
