--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -82,7 +82,7 @@ links:
     sublinks:
       - title: Quick Links
         url: /teachers/quick-links
-  - title: Portal
+  - title: Quick Links
     url: /portal
     sublinks:
       - title: Students
