--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Personal Learning Device/.keep
       - Personal Learning Device/Personal Learning Device.md
-      - Personal Learning Device/Parent Handbook (I) on Learning with a Personal
+      - Personal Learning Device/Parent Handbooks on Learning with a Personal
         Learning Device.md
       - Letters to Parents.md
       - Sexuality Education.md
