--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -6,6 +6,7 @@ collections:
       - Leave Of Absence (LOA).md
       - Sexuality Education.md
       - Learning for Life Programme.md
+      - Personal Learning Device/PLD Information Kit.md
       - Personal Learning Device/.keep
       - Personal Learning Device/Personal Learning Device.md
       - Personal Learning Device/Parent Handbooks on Learning with a Personal
