--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ links:
         url: /our-canberra/our-highlights
       - title: Our Staff
         url: /our-canberra/our-staff
-      - title: Yearbook 2021
-        url: https://online.fliphtml5.com/obrr/zfnn/#p=1
+      - title: Yearbook 2022
+        url: https://online.fliphtml5.com/imxpa/gitl/#p=1
   - title: Discover Canberra
     url: /discover-canberra/our-curriculum
     sublinks:
