--- a/_our-canberra/collection.yml
+++ b/_our-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-canberra:
     output: true
     order:
+      - School Advisory Committee.md
       - Principal's Foreword.md
       - Canberra at a Glance/.keep
       - Canberra at a Glance/School Song.md
