--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ links:
       - title: Our Highlights
         url: /our-canberra/our-highlights
       - title: School Advisory Committee
-        url: /permalink
+        url: /our-canberra/school-advisory-committee/
       - title: Our Staff
         url: /our-canberra/our-staff
       - title: Yearbook 2022
