--- a/_our-canberra/collection.yml
+++ b/_our-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-canberra:
     output: true
     order:
+      - Our Highlights/Our Highlights.md
       - Our Highlights/.keep
       - Principal's Foreword.md
       - Canberra at a Glance/.keep
