{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_our-canberra/collection.yml
+++ b/_our-canberra/collection.yml
@@ -8,7 +8,7 @@ collections:
       - Canberra at a Glance/School Logo.md
       - Canberra at a Glance/Mission and Vision.md
       - Our Highlights/.keep
-      - Our Highlights/Our Highlights.md
+      - Our Highlights/School & Student Achievements.md
       - School Advisory Committee.md
       - Our Staff.md
       - Yearbook 2022.md
