--- a/_our-canberra/collection.yml
+++ b/_our-canberra/collection.yml
@@ -7,6 +7,7 @@ collections:
       - Canberra at a Glance/School Song.md
       - Canberra at a Glance/School Logo.md
       - Canberra at a Glance/Mission and Vision.md
+      - Our Highlights/CCA Achievements.md
       - Our Highlights/.keep
       - Our Highlights/School & Student Achievements.md
       - School Advisory Committee.md
