{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -14,7 +14,7 @@ collections:
       - Cyberwellness Guides.md
       - School Family Education (SFE).md
       - DSA/.keep
-      - DSA/Direct School Admission (DSA).md
+      - DSA/Direct School Admission (DSA) 2024.md
       - DSA/Applied Learning Programme.md
       - Webinar Resources/.keep
       - Webinar Resources/Webinar Resources.md
