--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - Class Allocation.md
       - Student Leadership & Recognition.md
       - Student Suggestion Scheme (3S).md
       - PLD Acceptable Use Policy.md
