{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_partners-of-canberra/collection.yml
+++ b/_partners-of-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   partners-of-canberra:
     output: true
     order:
+      - School Canteen.md
       - Parent Support Group/.keep
       - Parent Support Group/Parent Support Group.md
       - Parent Support Group/Invitation to attend Breakfast Dialogue Session
