--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,7 +38,7 @@ links:
       - title: Friends of Canberra
         url: /partners-of-canberra/friends-of-canberra
       - title: School Canteen
-        url: https://canberrasec.moe.edu.sg/partners-of-canberra/school-canteen/
+        url: /partners-of-canberra/school-canteen/
   - title: Quick Links
     url: /portal
     sublinks:
