--- a/_our-co-curriculum/collection.yml
+++ b/_our-co-curriculum/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Our Co Curriculum.md
+      - Sports/Taekwondo (NEW!).md
       - Sports/Netball (NEW!).md
       - Sports/.keep
       - Sports/Badminton.md
