--- a/_our-co-curriculum/collection.yml
+++ b/_our-co-curriculum/collection.yml
@@ -15,6 +15,7 @@ collections:
       - Uniformed Groups/National Cadet Corps (SEA).md
       - Uniformed Groups/National Police Cadet Corp (NPCC).md
       - Uniformed Groups/National Civil Defence Cadet Corps (NCDCC).md
+      - Visual and Performing Arts/Guitar Ensemble (NEW!).md
       - Visual and Performing Arts/.keep
       - Visual and Performing Arts/Digital Media in Visual Arts Club (DMA).md
       - Visual and Performing Arts/Choir.md
