--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Canberra Secondary School
 url: https://canberrasec.moe.edu.sg
 favicon: /images/css-logo.png
 colors:
-  primary-color: "#200e96"
+  primary-color: "#2e5543"
   secondary-color: "#ff0000"
   media-colors:
     - title: media-color-one
@@ -57,3 +57,4 @@ is_government: false
 facebook-pixel: ""
 google_analytics: ""
 linkedin-insights: ""
+google_analytics_ga4: ""
