--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ colors:
   secondary-color: "#800000"
   media-colors:
     - title: media-color-one
-      color: "#200e96"
+      color: "#ddaaa5"
     - title: media-color-two
       color: "#200e96"
     - title: media-color-three
