--- a/_config.yml
+++ b/_config.yml
@@ -8,11 +8,11 @@ colors:
     - title: media-color-one
       color: "#ddaaa5"
     - title: media-color-two
-      color: "#200e96"
+      color: "#ddaaa5"
     - title: media-color-three
-      color: "#200e96"
+      color: "#fc9489"
     - title: media-color-four
-      color: "#200e96"
+      color: "#fc9489"
     - title: media-color-five
       color: "#200e96"
 description: An Isomer site of the Singapore Government
