{"message":"Update file: _config.yml","fileName":"_config.yml","userId":"574"}

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ colors:
     - title: media-color-one
       color: "#ddaaa5"
     - title: media-color-two
-      color: "#000000"
+      color: "#ffffff"
     - title: media-color-three
       color: "#fc9489"
     - title: media-color-four
