--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ colors:
     - title: media-color-one
       color: "#ddaaa5"
     - title: media-color-two
-      color: "#ffffff"
+      color: "#ddaaa5"
     - title: media-color-three
-      color: "#fc9489"
+      color: "#000000"
     - title: media-color-four
       color: "#fc9489"
     - title: media-color-five
