{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"574"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -39,5 +39,4 @@ links:
     url: /students/class-allocation/
     sublinks: []
   - title: Parent's Hub
-    url: /parents/letter-to-parents
-    sublinks: []
+    collection: parents
