{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"574"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -36,7 +36,6 @@ links:
       - title: Canberran Alumni
         url: /partners-of-canberra/canberran-alumni
   - title: Current Students
-    url: /students/class-allocation/
-    sublinks: []
+    collection: students
   - title: Parent's Hub
     collection: parents
