--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ colors:
   secondary-color: "#800000"
   media-colors:
     - title: media-color-one
-      color: "#ffffff"
+      color: "#200e96"
     - title: media-color-two
       color: "#ddaaa5"
     - title: media-color-three
-      color: "#000000"
+      color: "#200e96"
     - title: media-color-four
       color: "#fc9489"
     - title: media-color-five
