--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@ colors:
   secondary-color: "#800000"
   media-colors:
     - title: media-color-one
-      color: "#200e96"
+      color: "#ffd9d4"
     - title: media-color-two
-      color: "#ddaaa5"
+      color: "#ffb5ad"
     - title: media-color-three
-      color: "#200e96"
+      color: "#fc9489"
     - title: media-color-four
       color: "#fc9489"
     - title: media-color-five
