--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ colors:
   secondary-color: "#800000"
   media-colors:
     - title: media-color-one
-      color: "#ffd9d4"
+      color: "#ffb5ad"
     - title: media-color-two
       color: "#ffb5ad"
     - title: media-color-three
-      color: "#fc9489"
-    - title: media-color-four
       color: "#f5786b"
+    - title: media-color-four
+      color: "#200e96"
     - title: media-color-five
       color: "#200e96"
 description: An Isomer site of the Singapore Government
