--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ colors:
     - title: media-color-three
       color: "#f5786b"
     - title: media-color-four
-      color: "#200e96"
+      color: "#f5786b"
     - title: media-color-five
       color: "#200e96"
 description: An Isomer site of the Singapore Government
