{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"574"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,10 @@ links:
     collection: our-canberra
   - title: DIscover Canberra
     collection: discover-canberra
+  - title: Our Curriculum
+    collection: our-curriculum
+  - title: Our Co-Curriculum
+    collection: our-co-curriculum
   - title: Partners of Canberra
     collection: partners-of-canberra
   - title: Current Students
