--- a/_discover-canberra/collection.yml
+++ b/_discover-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   discover-canberra:
     output: true
     order:
+      - Our Curriculum/Science.md
       - Our Curriculum/Mathematics.md
       - Our Curriculum/English Language & Literature.md
       - Our Curriculum/Our Curriculum.md
