{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_discover-canberra/collection.yml
+++ b/_discover-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   discover-canberra:
     output: true
     order:
+      - Our Curriculum/Humanities.md
       - Our Curriculum/Science.md
       - Our Curriculum/Mathematics.md
       - Our Curriculum/English Language & Literature.md
