--- a/_our-curriculum/collection.yml
+++ b/_our-curriculum/collection.yml
@@ -2,6 +2,7 @@ collections:
   our-curriculum:
     output: true
     order:
+      - Mother Tongue.md
       - Craft & Technology/.keep
       - Craft & Technology/Craft & Technology.md
       - Craft & Technology/Arts.md
