{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_discover-canberra/collection.yml
+++ b/_discover-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   discover-canberra:
     output: true
     order:
+      - Our Co Curriculum.md
       - Our Curriculum.md
       - Learning for Life (LLP).md
       - Applied Learning (ALP).md
