--- a/_discover-canberra/collection.yml
+++ b/_discover-canberra/collection.yml
@@ -2,6 +2,7 @@ collections:
   discover-canberra:
     output: true
     order:
+      - Our Curriculum.md
       - Learning for Life (LLP).md
       - Applied Learning (ALP).md
       - Student Leadership & Recognition.md
