{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"574"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@ logo: /images/logo_large.png
 links:
   - title: Our Canberra
     collection: our-canberra
-  - title: DIscover Canberra
+  - title: Discover Canberra
     collection: discover-canberra
   - title: Partners of Canberra
     collection: partners-of-canberra
