--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - 2024 Booklist & Uniform Order Form.md
       - Class Allocation.md
       - Student Leadership & Recognition.md
       - Student Suggestion Scheme (3S).md
