{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_students/collection.yml
+++ b/_students/collection.yml
@@ -2,6 +2,7 @@ collections:
   students:
     output: true
     order:
+      - Guide to SLS Account Management.md
       - 2024 Booklist & Uniform Order Form.md
       - Class Allocation.md
       - Student Leadership & Recognition.md
