{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -2,6 +2,7 @@ collections:
   parents:
     output: true
     order:
+      - FAQs.md
       - Learning for Life Programme.md
       - Personal Learning Device/.keep
       - Personal Learning Device/Personal Learning Device.md
