{"message":"Update file: collection.yml","fileName":"collection.yml","userId":"574"}

--- a/_parents/collection.yml
+++ b/_parents/collection.yml
@@ -15,4 +15,4 @@ collections:
       - DSA/Direct School Admission (DSA) 2024.md
       - DSA/Applied Learning Programme.md
       - Leave Of Absence (LOA).md
-      - FAQs.md
+      - Frequently Asked Questions.md
