{"message":"Update file: navigation.yml","fileName":"navigation.yml","userId":"574"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 logo: /images/logo_large.png
 links:
-  - title: Our Canberra
+  - title: Canberra
     collection: our-canberra
   - title: Discover Canberra
     collection: discover-canberra
