--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/logo_large.png
 links:
   - title: Canberra
-    collection: our-canberra
+    collection: canberra
   - title: Discover Canberra
     collection: discover-canberra
   - title: Partners of Canberra
